<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <Button
        android:id="@+id/id_btn_login"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"
        android:onClick="onClickSingIn"
        android:text="@string/login"
        android:textColor="@color/color_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle"
        android:onClick="onClickRegister"
        android:text="@string/register"
        android:textColor="@color/color_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_btn_login" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/show_password"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />


    <ImageView
        android:id="@+id/id_image_chat"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="136dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/ic_chat_photo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/id_text_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/grey_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Chat" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/id_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="id_btn_login, id_image_chat, id_btn_register, materialCardView2, materialCardView3, checkBox" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/colorBackground"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/card_color"
        app:strokeWidth="1dp">

        <EditText
            android:id="@+id/id_edit_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:autofillHints="@string/email"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey_text"
            android:textColorHint="@color/grey_text" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="14dp"
            android:src="@drawable/dog"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorBackground"
        app:cardCornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
        app:strokeColor="@color/card_color"
        app:strokeWidth="1dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="17dp"
            android:src="@drawable/lock"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_edit_password"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:autofillHints="@string/password"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/grey_text"
            android:textColorHint="@color/grey_text" />

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

</androidx.constraintlayout.widget.ConstraintLayout>